fixed white space showing up under video on homepage

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -59,6 +59,7 @@
   width: 60vw;
   justify-content: end;
   margin-right: 2rem;
+  height: 500px;  /* ???? added to try fix white bar under vid */
 }
 
 .nav-item {
